<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffefefef"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/relativeLayout_courier"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10.0dip"
            android:text="@string/card_type"
            android:textColor="#ff282828"
            android:textSize="17.0sp" />

        <EditText
            android:id="@+id/edittext_car_type"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5.0dip"
            android:enabled="false"
            android:textColor="#ff9e9e9e"
            android:textSize="17.0sp" />

        <ImageView
            android:id="@+id/imageview_cut1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cut_line"
            android:contentDescription="@drawable/cut_line" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:text="@string/card_number"
            android:textColor="#ff000000"
            android:textSize="17.0sp" />

        <EditText
            android:id="@+id/edittext_car_code"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5.0dip"
            android:enabled="false"
            android:inputType="text"
            android:text=""
            android:textColor="#ff9e9e9e"
            android:textSize="17.0sp" />
    </LinearLayout>

    <LinearLayout

        android:id="@+id/mifareclassic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10.0dip"
            android:text="@string/auth_key"
            android:textColor="#ff282828"
            android:textSize="17.0sp" />

        <EditText
            android:id="@+id/edittext_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5.0dip"
            android:digits="0123456789abcdef"
            android:textColor="#ff9e9e9e"
            android:textSize="17.0sp" />

        <ImageView
            android:id="@+id/imageview_cut2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cut_line"
            android:contentDescription="@drawable/cut_line" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:text="@string/block_index"
            android:textColor="#ff000000"
            android:textSize="17.0sp" />

        <EditText
            android:id="@+id/edittext_block_id"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5.0dip"
            android:inputType="text"
            android:numeric="integer"
            android:text=""
            android:textColor="#ff9e9e9e"
            android:textSize="17.0sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:text="@string/card_content"
            android:textColor="#ff000000"
            android:textSize="17.0sp" />

        <EditText
            android:id="@+id/edittext_content"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5.0dip"
            android:inputType="text"
            android:text=""
            android:textColor="#ff9e9e9e"
            android:textSize="17.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/m1_le"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_hint"
            android:layout_width="0dp"
            android:layout_height="42.0dip"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/op_clear"
            android:textColor="#ffffffff"
            android:textSize="15.0sp" />

        <Button
            android:id="@+id/button_read"
            android:layout_width="0dp"
            android:layout_height="42.0dip"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/op_read"
            android:textColor="#ffffffff"
            android:textSize="15.0sp" />

        <Button
            android:id="@+id/button_write"
            android:layout_width="0dp"
            android:layout_height="42.0dip"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/op_write"
            android:textColor="#ffffffff"
            android:textSize="15.0sp" />

        <Button
            android:id="@+id/button_modify"
            android:layout_width="0dp"
            android:layout_height="42.0dip"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:text="@string/op_modify_key"
            android:textColor="#ffffffff"
            android:textSize="15.0sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_hint1"
        android:layout_width="250.0dip"
        android:layout_height="42.0dip"
        android:layout_gravity="center"
        android:layout_marginTop="20.0dip"
        android:layout_marginRight="5.0dip"
        android:text="@string/op_clear"
        android:textColor="#ffffffff"
        android:textSize="24.0sp"
        android:visibility="gone" />

</LinearLayout>